--- a/src/app.html
+++ b/src/app.html
@@ -38,5 +38,11 @@
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
+
+    <script
+      data-goatcounter="https://davelange.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
