--- a/src/app.html
+++ b/src/app.html
@@ -7,21 +7,9 @@
       content="width=device-width, initial-scale=1"
     />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,500;1,500&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-
     %sveltekit.head%
 
-    <script type="module">
+    <script>
       (() => {
         const theme = localStorage.getItem("theme");
         const defaultToDark =
